--- a/extensions/molecule/default/molecule.yml
+++ b/extensions/molecule/default/molecule.yml
@@ -6,7 +6,11 @@ driver:
 platforms:
   - name: instance
     dockerfile: ./Dockerfile.j2
-    image: geerlingguy/docker-ubuntu2204-ansible:latest
+    image: "geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu2204}-ansible:latest"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
     pre_build_image: true
     privileged: true
 provisioner:
