--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,8 @@ name: CI
     branches:
       - main
 
-defaults:
-  run:
-    working-directory: 'burnbrian.alienwarebaseline'
-
 jobs:
-
-  molecule:
+  test:
     name: Molecule
     runs-on: ubuntu-latest
     strategy:
@@ -23,8 +18,6 @@ jobs:
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v4
-        with:
-          path: 'burnbrian.alienwarebaseline'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v5
@@ -32,7 +25,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install test dependencies.
-        run: pip3 install ansible molecule molecule-plugins[docker] docker
+        run: pip3 install ansible molecule molecule-plugins[docker] docker ansible-lint yamllint
 
       - name: Run Molecule tests.
         run: molecule test
